# ai-world-cup

./: .env.example  .gitignore  LICENSE  README.md  daily_update.sh  pyproject.toml
.claude/memory/: MEMORY.md  ai-world-cup-i18n.md
.github/workflows/: auto-sync-upstream.yml  daily-data-update.yml  daily-update.yml  deploy-pages.yml
data/snapshots/: openfootball_0012293b03e1.json  openfootball_0843803c1192.json  openfootball_147238a984e0.json  openfootball_19ab8ff6dac7.json  openfootball_35e39176ab41.json  openfootball_3a43cbfbea19.json  openfootball_60c2250b2637.json  openfootball_622053c16a06.json  openfootball_6b65475e5f8d.json  openfootball_6c1d4e8c36cd.json  openfootball_7f8d5aa51267.json  openfootball_82176b371a43.json  openfootball_96440ac40ceb.json  openfootball_9c6a21ee3ea1.json  openfootball_9d327f6dfc0e.json  openfootball_bad06b817fa2.json  openfootball_bb9bcd362b68.json  openfootball_be0e370e0e75.json  (+38 more)
docs/: methodology.md  model_submission_template.md  prompt_protocol.md  scoring.md
notebooks/: 01_explore_data.ipynb
scripts/: evaluate_predictions.py  generate_prompts.py  import_response.py  rebuild_site_data.py  sync_data.py
tests/: conftest.py  test_data_sources_mocked.py  test_leaderboard.py  test_metrics.py  test_normalize.py  test_prompt_builder.py  test_response_parser.py  test_response_validator.py  test_site_export.py  test_tournament_importer.py  test_tournament_leaderboard.py  test_tournament_prompt_builder.py  test_tournament_response_validator.py
website/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+101 files in other folders)
