[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-world-cup"
version = "0.1.0"
description = "A reproducible benchmark for comparing LLM predictions on FIFA World Cup 2026."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AI World Cup contributors" }]
dependencies = [
  "httpx>=0.27",
  "pandas>=2.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "rich>=13.7",
  "sqlmodel>=0.0.22",
  "typer>=0.12",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.36"]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "streamlit>=1.36",
]

[project.scripts]
aiwc = "ai_world_cup.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_world_cup"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
